--- a/templates/login.html
+++ b/templates/login.html
@@ -17,13 +17,10 @@
                 </div>
                 <div class="card-body">
                     <form method='POST'>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" name='email' placeholder="Enter your email">
-                        </div>
+                        {% csrf_token %}
                         <div class="form-group">
                             <label for="email">Username</label>
-                            <input type="email" class="form-control" id="username" name='username' placeholder="Enter your username">
+                            <input type="text" class="form-control" id="username" name='username' placeholder="Enter your username">
                         </div>
                         <div class="form-group">
                             <label for="password">Password</label>
